Ignore changes to NetBeans project files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-/RoboticsHours/nbproject/private/
+/RoboticsHours/nbproject/
 /RoboticsHours/dist/
+/RoboticsHours/build.xml
+/RoboticsHours/manifest.mf
