Creating AdminScreen; ignoring form file
AdminScreen is like MainScreen, except there's no option to add hours.
Names are also displayed in AdminScreen, and edits are still allowed,
but not checked or updated properly.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /RoboticsHours/build/
 /RoboticsHours/data/
 RoboticsHours/src/roboticshours/MainScreen.form
+RoboticsHours/src/roboticshours/AdminScreen.form
