Cleaning up files
Ignoring ALL form files
Ignoring UML diagrams
Cleaning up unnecessary javax.swing. full declarations

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 /RoboticsHours/manifest.mf
 /RoboticsHours/build/
 /RoboticsHours/data/
-RoboticsHours/src/roboticshours/MainScreen.form
-RoboticsHours/src/roboticshours/AdminScreen.form
+UMLDiagrams/
+*.form
